--- a/Laerdal.Xamarin.Dfu/Laerdal.Xamarin.Dfu.csproj
+++ b/Laerdal.Xamarin.Dfu/Laerdal.Xamarin.Dfu.csproj
@@ -133,4 +133,5 @@
             <Frameworks>Foundation</Frameworks>
         </NativeReference>
     </ItemGroup>
+    <Import Project="Documentation.targets" />
 </Project>
