--- a/Laerdal.Xamarin.Dfu/Laerdal.Xamarin.Dfu.csproj
+++ b/Laerdal.Xamarin.Dfu/Laerdal.Xamarin.Dfu.csproj
@@ -8,8 +8,11 @@
         <LangVersion>8.0</LangVersion>
         <DebugSymbols>true</DebugSymbols>
         <OutputPath>bin\</OutputPath>
+        <Optimize>true</Optimize>
         <OutputType>Library</OutputType>
         <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+        <ErrorReport>prompt</ErrorReport>
+        <WarningLevel>4</WarningLevel>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -101,6 +104,7 @@
         <IsBindingProject>true</IsBindingProject>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <MtouchExtraArgs>-v -v -v -v</MtouchExtraArgs>
+        <DebugType>full</DebugType>
     </PropertyGroup>
     <ItemGroup Condition=" $(TargetFramework.ToLower().StartsWith('xamarin.ios')) ">
         <Reference Include="Xamarin.iOS" />
@@ -133,5 +137,6 @@
             <Frameworks>Foundation</Frameworks>
         </NativeReference>
     </ItemGroup>
+    
     <Import Project="Documentation.targets" />
 </Project>
