--- a/Laerdal.Dfu/Laerdal.Dfu.csproj
+++ b/Laerdal.Dfu/Laerdal.Dfu.csproj
@@ -95,6 +95,13 @@
         <LibraryProjectZip Include="Droid\Jars\*.aar" />
         <TransformFile Include="Droid\Transforms\*.xml" />
     </ItemGroup>
+    <Target 
+    Condition=" $(TargetFramework.ToLower().StartsWith('monoandroid')) " 
+    Name="CheckAndroidLibraryFilesExist" 
+    BeforeTargets="PrepareForBuild">
+        <Error Condition="!Exists('Droid\Jars\dfu-release.aar')" Text="Droid\Jars\dfu-release.aar does not exist" />
+        <Error Condition="!Exists('Droid\Jars\gson-2.8.6.jar')" Text="Droid\Jars\gson-2.8.6.jar does not exist" />
+    </Target>
 
     <!-- IOS -->
     <PropertyGroup Condition=" $(TargetFramework.ToLower().StartsWith('xamarin.ios')) ">
@@ -111,6 +118,13 @@
         <ObjcBindingApiDefinition Include="iOS\ObjcBinding\ApiDefinition.cs" />
         <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport" Version="0.2.0" />
     </ItemGroup>
+    <Target 
+    Condition=" $(TargetFramework.ToLower().StartsWith('xamarin.ios')) " 
+    Name="CheckIosLibraryFilesExist" 
+    BeforeTargets="PrepareForBuild">
+        <Error Condition="!Exists('iOS\Frameworks\iOSDFULibrary.framework')" Text="iOS\Frameworks\iOSDFULibrary.framework does not exist" />
+        <Error Condition="!Exists('iOS\Frameworks\ZIPFoundation.framework')" Text="iOS\Frameworks\ZIPFoundation.framework does not exist" />
+    </Target>
     
     <ItemGroup Condition=" $(TargetFramework.ToLower().StartsWith('xamarin.ios')) ">
         
