--- a/Laerdal.Dfu.Sample/Laerdal.Dfu.Sample.iOS/Laerdal.Dfu.Sample.iOS.csproj
+++ b/Laerdal.Dfu.Sample/Laerdal.Dfu.Sample.iOS/Laerdal.Dfu.Sample.iOS.csproj
@@ -17,37 +17,33 @@
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
         <ConsolePause>false</ConsolePause>
-        <DebugType>none</DebugType>
-        <Optimize>True</Optimize>
         <MtouchArch>ARM64</MtouchArch>
         <CodesignKey>iPhone Developer</CodesignKey>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
         <DebugType>full</DebugType>
         <DebugSymbols>true</DebugSymbols>
         <Optimize>false</Optimize>
-        <DefineConstants>DEBUG</DefineConstants>
+        <DefineConstants>DEBUG;__IOS__</DefineConstants>
         <MtouchDebug>true</MtouchDebug>
         <MtouchLink>None</MtouchLink>
         <MtouchExtraArgs>--interpreter</MtouchExtraArgs>
     </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Platform)' == 'iPhone' ">
-        <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    </PropertyGroup>
-
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
-    </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
+        <DebugType>none</DebugType>
+        <Optimize>True</Optimize>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
+        <DebugType>none</DebugType>
+        <Optimize>True</Optimize>
         <BuildIpa>True</BuildIpa>
         <CodesignProvision>Automatic:AdHoc</CodesignProvision>
         <CodesignKey>iPhone Distribution</CodesignKey>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
+        <DebugType>none</DebugType>
+        <Optimize>True</Optimize>
         <CodesignProvision>Automatic:AppStore</CodesignProvision>
         <CodesignKey>iPhone Distribution</CodesignKey>
     </PropertyGroup>
@@ -71,7 +67,7 @@
         <Reference Include="Xamarin.iOS" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Laerdal.Dfu" Version="0.2.16-beta0001" />
+        <PackageReference Include="Laerdal.Dfu" Version="0.2.16-beta0004" />
         <PackageReference Include="Plugin.BluetoothLE" Version="6.3.0.19" />
         <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
