--- a/Laerdal.Dfu/GitVersion.yml
+++ b/Laerdal.Dfu/GitVersion.yml
@@ -1,15 +1,16 @@
 mode: MainLine
 branches:
-  feature:
-    tag: alpha
-    increment: Patch
-  develop:
-    tag: beta
-    increment: Patch
-    regex: ^dev(elop)?(ment)?$
   master:
     tag: ''
     regex: (^master$|^origin\/master$|^main$|^origin\/main$)
     increment: Minor
+  feature:
+    tag: useBranchName
+    regex: ^features?[/-]
+    increment: Patch
+  develop:
+    tag: beta
+    regex: ^dev(elop)?(ment)?$
+    increment: Patch
   pull-request:
     tag: pr
