--- a/Laerdal.Dfu/GitVersion.yml
+++ b/Laerdal.Dfu/GitVersion.yml
@@ -1,16 +1,20 @@
-mode: MainLine
+mode: Mainline
 branches:
   master:
     tag: ''
-    regex: (^master$|^origin\/master$|^main$|^origin\/main$)
+    regex: (^master$|^main$)
     increment: Minor
+  release:
+    tag: rc
+    increment: Patch
   feature:
     tag: useBranchName
     regex: ^features?[/-]
-    increment: Patch
-  develop:
-    tag: beta
-    regex: ^dev(elop)?(ment)?$
-    increment: Patch
+    increment: Inherit
   pull-request:
     tag: pr
+    increment: Inherit
+  develop:
+    tag: beta
+    increment: Patch
+    regex: ^dev(elop)?(ment)?$
