--- a/Laerdal.Dfu/Laerdal.Dfu.csproj
+++ b/Laerdal.Dfu/Laerdal.Dfu.csproj
@@ -60,7 +60,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <!-- <None Include="../icon.png" Pack="true" PackagePath="\" /> -->
+        <None Include="../icon.png" Pack="true" PackagePath="\" />
         <None Include="../LICENSE" Pack="true" PackagePath="\" />
     </ItemGroup>
 
