--- a/Laerdal.Dfu/Laerdal.Dfu.csproj
+++ b/Laerdal.Dfu/Laerdal.Dfu.csproj
@@ -20,7 +20,7 @@
         <PackageProjectUrl>https://github.com/Laerdal/Laerdal.Dfu</PackageProjectUrl>
         <PackageVersion>1.0.0</PackageVersion>
         <PackageOutputPath>../$(RootNamespace).Output</PackageOutputPath>
-        <!-- <PackageIcon>icon.png</PackageIcon> -->
+        <PackageIcon>icon.png</PackageIcon>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
 
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
