Introducing build from Maven package

--- a/.gitignore
+++ b/.gitignore
@@ -355,8 +355,11 @@ Laerdal.Dfu.Output
 Laerdal.Dfu.Source/iOS
 Laerdal.Dfu.Source/Android
 Laerdal.Dfu.Source/iOS_Carthage
+Laerdal.Dfu.Source/Android_Maven
 
 Cartfile
 Carthage
 
 Laerdal.Dfu/Droid/Jars/dfu-release.aar
+
+.DS_Store
